@@ -21,4 +21,26 @@ defmodule Gitlab do
         %{}
     end
   end
+
+  def issues(query_options = %{}) do
+    timeout = Keyword.get(Application.get_env(:slab, :gitlab), :timeout_ms)
+    api_base_url = Keyword.get(Application.get_env(:slab, :gitlab), :api_base_url)
+    access_token = Keyword.get(Application.get_env(:slab, :gitlab), :private_token)
+    url = api_base_url <> "/issues?" <> URI.encode_query(query_options)
+    Logger.info("issues url - #{url}")
+
+    with {:ok, %HTTPoison.Response{status_code: 200, body: body}} <-
+           HTTPoison.get(
+             url,
+             ["Private-Token": "#{access_token}"],
+             timeout: timeout
+           ),
+         {:ok, body} <- Poison.decode(body) do
+      body
+    else
+      err ->
+        Logger.info("#{inspect(err)}")
+        []
+    end
+  end
 end
